fix crud total num

--- a/tmpl/crud.tmpl
+++ b/tmpl/crud.tmpl
@@ -129,6 +129,7 @@ func getQuery$(className)(current *models.Users, limit, offset int) (objs []*mod
 	if err != nil {
 		return
 	}
+	total = models.$(className)Count(query)
 	
 	return
 }
