--- a/tmpl/collection.tmpl
+++ b/tmpl/collection.tmpl
@@ -57,18 +57,14 @@ func $(obj.name.value)Count(query interface{}) (result int) {
 	return
 }
 
-func $(obj.name.value)FindByIDs(id []string) (result []*$obj.name.value, err error) {
-	session, col := db.GetCol("$obj.name.value")
-	defer session.Close()
-
+func $(obj.name.value)FindByIDs(id []string, sortFields ...string) (result []*$obj.name.value, err error) {
 	ids := make([]bson.ObjectId, 0, len(id))
 	for _, i := range id {
 		if bson.IsObjectIdHex(i) {
 			ids = append(ids, bson.ObjectIdHex(i))
 		}
 	}
-	err = col.Find(db.M{"_id": db.M{"\$in": ids}}).All(&result)
-	return
+	return $(obj.name.value)FindAll(db.M{"_id": db.M{"\$in": ids}}, sortFields...)
 }
 
 #for i in $obj.toList
@@ -127,18 +123,3 @@ func $(obj.name.value)RemoveByID(id string) (result *$obj.name.value, err error)
 	return
 }
 
-func $(obj.name.value)FindByUsersIDs(ids []string) (result []*$obj.name.value, err error) {
-	session, col := db.GetCol("$obj.name.value")
-	defer session.Close()
-
-	err = col.Find(db.M{"UsersID": db.M{"\$in": ids}}).All(&result)
-	return
-}
-
-func $(obj.name.value)CountByUsersIDs(ids []string) (result int) {
-	session, col := db.GetCol("$obj.name.value")
-	defer session.Close()
-
-	result, _ = col.Find(db.M{"UsersID": db.M{"\$in": ids}}).Count()
-	return
-}
