--- a/tmpl/crud.tmpl
+++ b/tmpl/crud.tmpl
@@ -15,7 +15,7 @@ import (
 
 	//Own libs
 	"admin"
-	autoTpl "tpl/auto"
+	autoTpl "$tplPackage"
 	"zfw/models"
 	"github.com/sipin/web"
 	"labix.org/v2/mgo/bson"
