add orderFields support

--- a/go_package.tmpl
+++ b/go_package.tmpl
@@ -21,6 +21,7 @@ var ErrInvalidObjectId = errors.New("Invalid input to ObjectIdHex")
 type IDLabelPair struct {
 	ID string
 	Label string
+	Order string
 }
 
 func WidgetDisable(ws ...*Widget) {
